--- a/.github/workflows/build_docker_image_release.yml
+++ b/.github/workflows/build_docker_image_release.yml
@@ -14,6 +14,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+        
+    - name: pwd
+      run: pwd
 
     - name: Build
       run: go build -v ./...
